# ff-stats-tracker

./: .gitignore  README.md  app.py  check_db.py  pyproject.toml  streamlit_app.py  test_ibm_db.py
database/: create_db2_schema.py  create_models.py  database.py  recreate_tables.py  schema_db2.sql
models/: base_model.py  game.py  player.py  player_stats.py  players.py  team.py
routers/: game.py  player.py  stats.py  team.py
schemas/: base.py  games.py  player_stats.py  players.py  teams.py
