[tool.poetry]
name = "stats-app"
version = "0.1.0"
description = ""
authors = ["akeeme <akeemeblack@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
uvicorn = "^0.34.2"
python-dotenv = "^1.1.0"
pydantic = "^2.11.3"
requests = "^2.32.3"
streamlit = "^1.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
